--- a/index.html
+++ b/index.html
@@ -35,6 +35,29 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #94a3b8;
       }
+
+      /* PRINT STYLES */
+      @media print {
+        @page { size: landscape; margin: 0.5cm; }
+        body { 
+          background-color: white !important; 
+          overflow: visible !important; 
+          height: auto !important;
+          -webkit-print-color-adjust: exact;
+          print-color-adjust: exact;
+        }
+        #root, main, .mindmap-container {
+          position: static !important;
+          width: 100% !important;
+          height: auto !important;
+          overflow: visible !important;
+          background: white !important;
+        }
+        /* Hide UI Elements */
+        header, button, .print\:hidden {
+          display: none !important;
+        }
+      }
     </style>
 <script type="importmap">
 {
@@ -47,7 +70,8 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "firebase/app": "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js",
     "firebase/database": "https://www.gstatic.com/firebasejs/10.8.1/firebase-database.js",
-    "firebase/": "https://esm.sh/firebase@^12.7.0/"
+    "firebase/": "https://esm.sh/firebase@^12.7.0/",
+    "html2canvas": "https://esm.sh/html2canvas@1.4.1"
   }
 }
 </script>
